finalized project, fixed navbar display block  for mobile, fixed tables with overflow: auto, and all looks good

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,7 +2,7 @@ $green:#99cc33;
 $blue: #337ab7;
 $red:#900000;
 $container:#ffffcc;
-$tab:darken($green, 7%);;
+$tab:darken($green, 3%);;
 $bodyColor: lighten($green, 20%);
 $lightBlue:lighten($blue, 10%);
 
